kafka added fully for btc

--- a/.env
+++ b/.env
@@ -1,14 +1,48 @@
-POSTGRES_PASSWORD=mehrad10
-POSTGRES_USER=eren
-POSTGRES_HOST=cryptic_postgres
-POSTGRES_PORT=5432
-################
-DATABASE=cryptic
+### General
 ################
 FOREX_ASSETS="EURUSD,GBPUSD,USDJPY,XAUUSD,XAGUSD" 
 CRYPTO_ASSETS="BTCUSDT,ETHUSDT"
-#################
+################
+
+POSTGRES_HOST=postgres
+POSTGRES_USER=eren
+POSTGRES_PASSWORD=mehrad10
+POSTGRES_PORT=5432
+DATABASE=cryptic
+HOST_POSTGRES_PORT=5433
+
+
 PGADMIN_DEFAULT_EMAIL=levi@test.com
 PGADMIN_DEFAULT_PASSWORD=Mehrad1
-#####
-ALPHA_VANTAGE_API_KEY=2SDN7811QTKQNAND
+HOST_PGADMIN_PORT=8888
+
+########## PERFECT #####
+PERFECT_PORT=4200
+
+#### TIMESCALE
+HOST_TIMESCALE_PORT=5434
+LOCAL_TIMESCALE_PORT=5432
+TIMESCALE_HOST_NAME=timescaledb
+TIMESCALE_DATABASE=cryptic_live
+TIMESCALE_USER=jean
+TIMESCALE_PASSWORD=mikasa10
+
+
+#### Zookeeper
+ZOOKEEPER_PORT=2181
+ZOOKEPER_TICK_TIME=2000
+
+# Schema Registry
+SCHEMA_REGISTRY_HOST_NAME=schema-registry
+HOST_SCHEMA_REGISTRY_PORT=8081
+LOCAL_SCHMEA_REGISTRY_PORT=8081
+
+# Kafka
+KAFKA_HOST_NAME=kafka
+HOST_KAFKA_PORT1=9092
+HOST_KAFKA_PORT2=29092
+
+LOCAL_KAFKA_PORT1=9092
+LOCAL_KAFKA_PORT2=29092
+
+### REDIS
