--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-redis_data
-postgres_data
-./pgadmin_data
-./postgres_data
-dashboard/__pycache__/
-data/__pycache__/
-__pycache__/
-lightning_logs/
-config.json
-binance_test_net_urls.json
-binance_test_net.json
-*.pkl
-*.log
-data/pgadmin_data/pgadmin4.db
-.vscode/
-temp.ipynb
-*/temp.ipynb
-temp2.ipynb
+*.pyc
+*.env
+*.pyc
+*.env
+**/.env
+./docker_volume/*
