--- a/.env
+++ b/.env
@@ -4,14 +4,16 @@ FOREX_ASSETS="EURUSD,GBPUSD,USDJPY,XAUUSD,XAGUSD"
 CRYPTO_ASSETS="BTCUSDT,ETHUSDT"
 ################
 
+
+#### POSTGRES #####
 POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+HOST_POSTGRES_PORT=5433
 POSTGRES_USER=eren
 POSTGRES_PASSWORD=mehrad10
-POSTGRES_PORT=5432
 DATABASE=cryptic
-HOST_POSTGRES_PORT=5433
 
-
+########## PGADMIN #####
 PGADMIN_DEFAULT_EMAIL=levi@test.com
 PGADMIN_DEFAULT_PASSWORD=Mehrad1
 HOST_PGADMIN_PORT=8888
