--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ services:
       - net
     depends_on:
       - postgres
+      - timescaledb
     logging:
       driver: none
-  # #################### END POSTGRES PGADMIN############################
 
   # #################### PREFECT SERVER ################################
   perfect_server:
@@ -63,8 +63,6 @@ services:
       - net
     logging:
       driver: none
-  # #################### END PREFECT SERVER ################################
-
   # #################### FASTAPI APP ################################
   # # fastapi-app:
   # #   build:
@@ -89,7 +87,11 @@ services:
       POSTGRES_DB: ${TIMESCALE_DATABASE}
       POSTGRES_USER: ${TIMESCALE_USER}
       POSTGRES_PASSWORD: ${TIMESCALE_PASSWORD}
+      TIMESCALE_DATABASE: ${TIMESCALE_DATABASE}
+      FOREX_ASSETS: ${FOREX_ASSETS}
+      CRYPTO_ASSETS: ${CRYPTO_ASSETS}
     volumes:
+      - ./docker_init/timescale_init:/docker-entrypoint-initdb.d
       - ./docker_volume/timescaledb_data:/var/lib/postgresql/data
     networks:
       - net
@@ -97,176 +99,180 @@ services:
       driver: none
   ###################################################################
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    environment:
-      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT}
-      ZOOKEEPER_TICK_TIME: ${ZOOKEPER_TICK_TIME}
-    ports:
-      - "${ZOOKEEPER_PORT}:${ZOOKEEPER_PORT}"
-    networks:
-      - net
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "echo",
-          "ruok",
-          "|",
-          "nc",
-          "localhost",
-          "2181",
-          "|",
-          "grep",
-          "imok",
-        ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    logging:
-      driver: none
-  ########################## ############################# #############
-  kafka:
-    image: confluentinc/cp-kafka:latest
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:${ZOOKEEPER_PORT}"
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${LOCAL_KAFKA_PORT1},PLAINTEXT_HOST://kafka:${LOCAL_KAFKA_PORT2}
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:${LOCAL_KAFKA_PORT1},PLAINTEXT_HOST://0.0.0.0:${LOCAL_KAFKA_PORT2}
-      KAFKA_DELETE_TOPIC_ENABLE: "true"
-      KAFKA_JMX_PORT: 9999
-      KAFKA_JMX_HOSTNAME: "kafka"
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_MESSAGE_MAX_BYTES: 200000000 # Increase max message size to 200 MB
-      KAFKA_REPLICA_FETCH_MAX_BYTES: 200000000 # Increase fetch size to 200 MB
-      CONNECT_MAX_REQUEST_SIZE: 200000000 # Increase request size to 200 MB
-      CONNECT_PRODUCER_MAX_REQUEST_SIZE: 200000000 # Increase producer request size to 200 MB
-      CONNECT_CONSUMER_MAX_FETCH_BYTES: 200000000 # Increase consumer fetch size to 200 MB
-    ports:
-      - "${HOST_KAFKA_PORT1}:${LOCAL_KAFKA_PORT1}"
-      - "${HOST_KAFKA_PORT2}:${LOCAL_KAFKA_PORT2}"
-    networks:
-      - net
-    depends_on:
-      zookeeper:
-        condition: service_healthy
-  ###################################################################
-  schema-registry:
-    image: confluentinc/cp-schema-registry:latest
-    container_name: schema-registry
-    ports:
-      - "${HOST_SCHEMA_REGISTRY_PORT}:${LOCAL_SCHMEA_REGISTRY_PORT}"
-    depends_on:
-      - zookeeper
-      - kafka
-    environment:
-      SCHEMA_REGISTRY_HOST_NAME: ${SCHEMA_REGISTRY_HOST_NAME}
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: ${KAFKA_HOST_NAME}:${LOCAL_KAFKA_PORT2}
-    networks:
-      - net
-  ###################################################################
-  kafka-connect:
-    image: confluentinc/cp-kafka-connect-base:6.2.0
-    container_name: kafka-connect
-    depends_on:
-      - kafka
-    ports:
-      - 8085:8085
-    environment:
-      CONNECT_BOOTSTRAP_SERVERS: "kafka:29092"
-      CONNECT_REST_PORT: 8085
-      CONNECT_GROUP_ID: kafka-connect
-      CONNECT_CONFIG_STORAGE_TOPIC: _connect-configs
-      CONNECT_OFFSET_STORAGE_TOPIC: _connect-offsets
-      CONNECT_STATUS_STORAGE_TOPIC: _connect-status
-      CONNECT_KEY_CONVERTER: org.apache.kafka.connect.storage.StringConverter
-      CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
-      CONNECT_REST_ADVERTISED_HOST_NAME: "kafka-connect"
-      CONNECT_LOG4J_APPENDER_STDOUT_LAYOUT_CONVERSIONPATTERN: "[%d] %p %X{connector.context}%m (%c:%L)%n"
-      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: "1"
-      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: "1"
-      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: "1"
-      TIMESCALE_DATABASE: ${TIMESCALE_DATABASE}
-      TIMESCALE_HOST_NAME: ${TIMESCALE_HOST_NAME}
-      TIMESCALE_USER: ${TIMESCALE_USER}
-      TIMESCALE_PASSWORD: ${TIMESCALE_PASSWORD}
-      TIMESCALE_PORT: ${LOCAL_TIMESCALE_PORT}
-      #  ---------------
-      CONNECT_PLUGIN_PATH: /usr/share/java,/usr/share/confluent-hub-components,/data/connect-jars,/usr/share/custom-plugins
-    volumes:
-      - ./docker_init/kafka_init/connect-plugins:/usr/share/custom-plugins
-      - ./docker_init/kafka_init/kafka-connect-configs/timescaledb-sink.json:/usr/share/connect-configs/timescaledb-sink.json
-    command:
-      - bash
-      - -c
-      - |
-        echo "Launching Kafka Connect worker"
+  # zookeeper:
+  #   image: confluentinc/cp-zookeeper:latest
+  #   environment:
+  #     ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT}
+  #     ZOOKEEPER_TICK_TIME: ${ZOOKEPER_TICK_TIME}
+  #   ports:
+  #     - "${ZOOKEEPER_PORT}:${ZOOKEEPER_PORT}"
+  #   networks:
+  #     - net
+  #   healthcheck:
+  #     test:
+  #       [
+  #         "CMD",
+  #         "echo",
+  #         "ruok",
+  #         "|",
+  #         "nc",
+  #         "localhost",
+  #         "2181",
+  #         "|",
+  #         "grep",
+  #         "imok",
+  #       ]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #   logging:
+  #     driver: none
+  # ########################## ############################# #############
+  # kafka:
+  #   image: confluentinc/cp-kafka:latest
+  #   environment:
+  #     KAFKA_BROKER_ID: 1
+  #     KAFKA_ZOOKEEPER_CONNECT: "zookeeper:${ZOOKEEPER_PORT}"
+  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${LOCAL_KAFKA_PORT1},PLAINTEXT_HOST://kafka:${LOCAL_KAFKA_PORT2}
+  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+  #     KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:${LOCAL_KAFKA_PORT1},PLAINTEXT_HOST://0.0.0.0:${LOCAL_KAFKA_PORT2}
+  #     KAFKA_DELETE_TOPIC_ENABLE: "true"
+  #     KAFKA_JMX_PORT: 9999
+  #     KAFKA_JMX_HOSTNAME: "kafka"
+  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  #     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+  #     KAFKA_MESSAGE_MAX_BYTES: 200000000 # Increase max message size to 200 MB
+  #     KAFKA_REPLICA_FETCH_MAX_BYTES: 200000000 # Increase fetch size to 200 MB
+  #     CONNECT_MAX_REQUEST_SIZE: 200000000 # Increase request size to 200 MB
+  #     CONNECT_PRODUCER_MAX_REQUEST_SIZE: 200000000 # Increase producer request size to 200 MB
+  #     CONNECT_CONSUMER_MAX_FETCH_BYTES: 200000000 # Increase consumer fetch size to 200 MB
+  #   ports:
+  #     - "${HOST_KAFKA_PORT1}:${LOCAL_KAFKA_PORT1}"
+  #     - "${HOST_KAFKA_PORT2}:${LOCAL_KAFKA_PORT2}"
+  #   networks:
+  #     - net
+  #   depends_on:
+  #     zookeeper:
+  #       condition: service_healthy
+  # ###################################################################
+  # schema-registry:
+  #   image: confluentinc/cp-schema-registry:latest
+  #   container_name: schema-registry
+  #   ports:
+  #     - "${HOST_SCHEMA_REGISTRY_PORT}:${LOCAL_SCHMEA_REGISTRY_PORT}"
+  #   depends_on:
+  #     - zookeeper
+  #     - kafka
+  #   environment:
+  #     SCHEMA_REGISTRY_HOST_NAME: ${SCHEMA_REGISTRY_HOST_NAME}
+  #     SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: ${KAFKA_HOST_NAME}:${LOCAL_KAFKA_PORT2}
+  #   networks:
+  #     - net
+  # ###################################################################
+  # kafka-connect:
+  #   image: confluentinc/cp-kafka-connect-base:6.2.0
+  #   container_name: kafka-connect
+  #   depends_on:
+  #     - kafka
+  #   ports:
+  #     - 8085:8085
+  #   environment:
+  #     CONNECT_BOOTSTRAP_SERVERS: "kafka:29092"
+  #     CONNECT_REST_PORT: 8085
+  #     CONNECT_GROUP_ID: kafka-connect
+  #     CONNECT_CONFIG_STORAGE_TOPIC: _connect-configs
+  #     CONNECT_OFFSET_STORAGE_TOPIC: _connect-offsets
+  #     CONNECT_STATUS_STORAGE_TOPIC: _connect-status
+  #     CONNECT_KEY_CONVERTER: org.apache.kafka.connect.storage.StringConverter
+  #     CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
+  #     CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+  #     CONNECT_REST_ADVERTISED_HOST_NAME: "kafka-connect"
+  #     CONNECT_LOG4J_APPENDER_STDOUT_LAYOUT_CONVERSIONPATTERN: "[%d] %p %X{connector.context}%m (%c:%L)%n"
+  #     CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: "1"
+  #     CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: "1"
+  #     CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: "1"
+  #     TIMESCALE_DATABASE: ${TIMESCALE_DATABASE}
+  #     TIMESCALE_HOST_NAME: ${TIMESCALE_HOST_NAME}
+  #     TIMESCALE_USER: ${TIMESCALE_USER}
+  #     TIMESCALE_PASSWORD: ${TIMESCALE_PASSWORD}
+  #     TIMESCALE_PORT: ${LOCAL_TIMESCALE_PORT}
+  #     #  ---------------
+  #     CONNECT_PLUGIN_PATH: /usr/share/java,/usr/share/confluent-hub-components,/data/connect-jars,/usr/share/custom-plugins
+  #   volumes:
+  #     - ./docker_init/kafka_init/connect-plugins:/usr/share/custom-plugins
+  #     - ./docker_init/kafka_init/kafka-connect-configs/timescaledb-sink.json:/usr/share/connect-configs/timescaledb-sink.json
+  #   command:
+  #     - bash
+  #     - -c
+  #     - |
+  #       echo "Launching Kafka Connect worker"
 
-        sleep 10
+  #       sleep 10
 
-        /etc/confluent/docker/run &
+  #       /etc/confluent/docker/run &
 
-        echo "Waiting for Kafka Connect to start listening on 8085..."
-        while ! nc -z localhost 8085; do
-          sleep 1 # wait for 1 second before check again
-        done
+  #       echo "Waiting for Kafka Connect to start listening on 8085..."
+  #       while ! nc -z localhost 8085; do
+  #         sleep 1 # wait for 1 second before check again
+  #       done
 
-        sleep 10 # wait a bit for connectors to be installed and Kafka Connect to stabilize
+  #       sleep 10 # wait a bit for connectors to be installed and Kafka Connect to stabilize
 
-        echo "Posting configuration to Kafka Connect"
-        curl -X POST -H "Content-Type: application/json" --data @/usr/share/connect-configs/timescaledb-sink.json http://kafka-connect:8085/connectors
+  #       echo "Posting configuration to Kafka Connect"
+  #       curl -X POST -H "Content-Type: application/json" --data @/usr/share/connect-configs/timescaledb-sink.json http://kafka-connect:8085/connectors
 
-        sleep infinity
+  #       sleep infinity
 
-    networks:
-      - net
+  #   networks:
+  #     - net
 
   # ######################### END KAFKA ################################
 
   # ########################## REDIS ################################
-  # # cryptic_redis:
-  # #   image: redis:6
-  # #   volumes:
-  # #     - ./redis_data:/data
-  # #   networks:
-  # #     - cryptic_network
-  # #   ports:
-  # #     - "6379:6379"
-  # # cryptic_redisinsight:
-  # #   image: redislabs/redisinsight:latest
-  # #   restart: unless-stopped
-  # #   environment:
-  # #     REDIS_1_HOST: cryptic_redis
-  # #   networks:
-  # #     - cryptic_network
-  # #   ports:
-  # #     - "8001:5540"
-  # #   depends_on:
-  # #     - cryptic_redis
+  cryptic_redis:
+    image: redis:6
+    volumes:
+      - ./docker_volume/redis_data:/data
+    networks:
+      - net
+    ports:
+      - "6379:6379"
+  cryptic_redisinsight:
+    image: redislabs/redisinsight:latest
+    environment:
+      REDIS_1_HOST: cryptic_redis
+      REDIS_1_PORT: 6379
+    volumes:
+      - ./docker_volume/redisinsight_data:/db
+      - ./docker_volume/redisinsight_volumes:/usr/src/app/db
+    networks:
+      - net
+    ports:
+      - "8001:5540"
+    depends_on:
+      - cryptic_redis
+
   # ######################## END REDIS ################################
 
   ################################ SCRIPTS ################################
-  crypto_live:
-    build:
-      context: ./crypto_live
-      dockerfile: Dockerfile
-    environment:
-      KAFKA_BOOTSTRAP_SERVERS: kafka:${LOCAL_KAFKA_PORT1}
-      SCHEMA_REGISTRY_URL: http://schema-registry:{LOCAL_SCHMEA_REGISTRY_PORT}
-    depends_on:
-      - kafka
-      - zookeeper
-      - schema-registry
-    volumes:
-      - ./crypto_live:/app
+  # crypto_live:
+  #   build:
+  #     context: ./crypto_live
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     KAFKA_BOOTSTRAP_SERVERS: kafka:${LOCAL_KAFKA_PORT1}
+  #     SCHEMA_REGISTRY_URL: http://schema-registry:{LOCAL_SCHMEA_REGISTRY_PORT}
+  #   depends_on:
+  #     - kafka
+  #     - zookeeper
+  #     - schema-registry
+  #   volumes:
+  #     - ./crypto_live:/app
 
-    networks:
-      - net
+  #   networks:
+  #     - net
   # logging:
   #   driver: none
   ###################################################################
